backend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vegan-ingress
  namespace: vegan
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: vegan.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: vegan
            port: 
             number: 8085
  tls:
  - hosts:
    - vegan.com
    secretName: https-secret
